Add git, update phone number
Add git skill and update the phone number to make it parse better during auto population

--- a/Ujjanth-Grad-Resume-v6.html
+++ b/Ujjanth-Grad-Resume-v6.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="personal-details-item phone-number">
-                <i class="personal-details-icon fa-solid fa-phone fa-fw"></i>(857) 313-2887
+                <i class="personal-details-icon fa-solid fa-phone fa-fw"></i>8573132887
             </div>
 
             <div class="personal-details-item email-address">
@@ -124,7 +124,7 @@
 
                     <tr>
                         <td>Dev Ops and Maintenance</td>
-                        <td>Jenkins, Bitbucket, GitHub, Docker, Windows Server 2008</td>
+                        <td>Git, GitHub, Jenkins, Bitbucket, Docker, Windows Server 2008</td>
                     </tr>
 
                     <tr>
